--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-with-important-style": "^0.2.2",
     "react95": "^4.0.0",
     "styled-components": "^5.3.9",
     "typescript": "^4.4.2",
