--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "5.0.1",
     "react-with-important-style": "^0.2.2",
     "react95": "^4.0.0",
+    "serve": "^14.2.0",
     "styled-components": "^5.3.9",
     "typescript": "^4.4.2",
     "v6": "^0.0.0",
