--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.11",
+    "@types/react-resizable": "^3.0.4",
     "@types/react-router-dom": "^5.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
+    "react-resizable": "^3.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-with-important-style": "^0.2.2",
