--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "styled-components": "^5.3.9",
     "typescript": "^4.4.2",
     "v6": "^0.0.0",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "zustand": "^4.3.8"
   },
   "scripts": {
     "start": "react-scripts start",
